--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "@vimeo/player": "^2.19.0",
+    "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
     "parcel-transformer-hbs": "^1.0.4",
     "simplelightbox": "^2.13.0"
