--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://AleksandrSherehkov.github.io/goit-js-hw-008a.git",
+  "homepage": "https://AleksandrSherehkov.github.io/goit-js-hw-008a",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-008a.git/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-008a/"
   },
   "repository": {
     "type": "git",
